# kitti-player-lcm

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  CMakeLists.txt~  KittiData.cpp  KittiData.h  LCMThread.cpp  LCMThread.h  main.cpp  myglwidget.cpp  myglwidget.h  resources.qrc  window.cpp  window.h  window.ui
